--- a/SV.css
+++ b/SV.css
@@ -151,7 +151,7 @@ header {
     }
 
     .photo-container {
-        
+        margin-top: 10%;
         flex: 0 1 100%;
         max-width: 500px;
     }
@@ -209,6 +209,7 @@ header {
     .photo-container img {
         width: 100%;
         height: auto;
+        margin-top: 10%;
        
     }
 
@@ -246,8 +247,9 @@ header {
     }
 
     .photo-container {
-        width: 100px;
-        height: 130px;
+        width: 100%;
+        max-width: 200px;
+        margin-top: 10%;
     }
 
     .info p {
@@ -280,7 +282,7 @@ header {
     .photo-container {
         width: 100%;
         max-width: 150px;
-        margin-top: 30px; /* Отодвигаем фото ниже */
+        margin-top: 10%; /* Отодвигаем фото ниже */
     }
 
     .info {
