--- a/SV.css
+++ b/SV.css
@@ -159,15 +159,15 @@ header {
     }
 
     .name-job {
-     
+        margin-top: -8%;
         text-align: center;
         font-size: 28px;
-        margin-bottom: 10px;
+       
     }
 
     .name-job h3 {
         font-size: 28px;
-        margin-top: 5px;
+        
     }
 
     .photo-container {
@@ -176,8 +176,11 @@ header {
         margin: 10px 0;
     }
     .contact-info {
-       
+       margin-top: 1%;
+       margin-left: 6%;
         text-align: center;
+        border: 2px solid black;
+        width: 270px;
 
     }
 
