--- a/SV.css
+++ b/SV.css
@@ -35,7 +35,7 @@ header {
 
 /* Фото слева на ПК */
 .photo-container {
-    flex: 0 1 auto;
+    flex: 0 1 100%;
     max-width: 500px;
     min-width: 150px;
     overflow: hidden;
@@ -113,10 +113,24 @@ header {
 }
 
 /* Планшеты и маленькие экраны */
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1280px) and (min-width: 821px) {
+
     header {
         padding: 4% 10%;
         min-height: 220px;
+    }
+
+    .photo-container {
+        max-width: 400px;
+        /* Устанавливаем максимальную ширину фото */
+        width: 100%;
+        /* Ширина контейнера по умолчанию 100% */
+        flex: 0 1 auto;
+        /* Задаем нормальный flex-размер */
+        margin-left: 19%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     .header-content {
@@ -125,6 +139,7 @@ header {
 
     .name-job {
         font-size: 32px;
+        margin-left: 2%;
     }
 
     .name-job h3 {
@@ -133,11 +148,12 @@ header {
 
     .contact-info {
         font-size: 18px;
+        margin-left: 2%;
     }
 }
 
 /* Мобильные устройства */
-@media screen and (max-width: 820px)  {
+@media screen and (max-width: 820px) {
     header {
         height: auto;
         padding: 8% 5%;
@@ -155,32 +171,33 @@ header {
         display: flex;
         flex-direction: column;
         width: 100%;
-        
+
     }
 
     .name-job {
-        margin-top: -8%;
+        margin-top: -6%;
         text-align: center;
         font-size: 28px;
-       
+
     }
 
     .name-job h3 {
         font-size: 28px;
-        
+
     }
 
     .photo-container {
-       
+
         max-width: 250px;
         margin: 10px 0;
     }
+
     .contact-info {
-       margin-top: 1%;
-       margin-left: 6%;
+        margin-top: 1%;
+        margin-left: 8%;
         text-align: center;
         border: 2px solid black;
-        width: 270px;
+        width: 87%;
 
     }
 
@@ -194,15 +211,15 @@ header {
     .name-job h1 {
         font-size: 24px;
     }
-    
+
     .name-job h3 {
         font-size: 22px;
     }
-    
+
     .contact-info {
         font-size: 16px;
     }
-    
+
     .photo-container {
         max-width: 200px;
     }
