--- a/SV.css
+++ b/SV.css
@@ -175,7 +175,7 @@ header {
     }
 
     .name-job {
-        margin-top: -6%;
+        margin-top: -10%;
         text-align: center;
         font-size: 28px;
 
@@ -190,14 +190,14 @@ header {
 
         max-width: 250px;
         margin: 10px 0;
+        width: 100%;
     }
 
     .contact-info {
         margin-top: 1%;
-        margin-left: 8%;
         text-align: center;
         border: 2px solid black;
-        width: 87%;
+        
 
     }
 
@@ -227,5 +227,29 @@ header {
 
     .photo-container {
         max-width: 200px;
+        width: 100%; 
+    }
+}
+@media screen and (max-width: 393px){
+    header {
+        height: auto;
+        padding: 8% 5%;
+        min-height: 200px;
+    }
+    .name-job h1 {
+        font-size: 24px;
+    }
+
+    .name-job h3 {
+        font-size: 22px;
+    }
+
+    .contact-info {
+        font-size: 16px;
+    }
+
+    .photo-container {
+        max-width: 200px;
+        width: 100%; 
     }
 }
