--- a/main.css
+++ b/main.css
@@ -4,11 +4,9 @@ main{
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    padding: 1% 5%;
-    position: relative;
+    padding: 2% 5%;
     width: 100%;
     min-height: 250px;
-    overflow: hidden ;
     flex-direction: column;
 }
 
@@ -16,31 +14,142 @@ main{
     display: flex;
     justify-content: space-between;
     width: 100%;
-    max-width: 1400px;  /* Устанавливаем максимальную ширину для контента */
+    /* Устанавливаем максимальную ширину для контента */
 }
 
 
-.study, .profile {
-    flex: 1;
-    padding: 10px;
-}
 .study {
-    margin-right: 20px;  /* Отступ между блоками */
-    align-items: center;
+    flex: 0.5;  /* Увеличиваем размер */
+    padding: 20px;
+    text-align: left;
+    margin-right: 40px;
 }
 
 .profile {
+    flex: 1;  /* Делаем чуть меньше */
+    padding: 20px;
     margin-left: 20px;
 }
 
-.study h2{
+
+.study h2, .profile h2 {
     background-color: rgb(197, 190, 180);
-    transform: translateX(20px); /* Сдвиг текста на 10px вправо */
     font-size: 28px;
     margin-bottom: 10px;
-    width: 60%;
+    width: 100%;
+    padding: 5px 10px;
 }
-h3, h4, h5, p {
-    font-size: 22px;
+.study h2 {
+    text-align: left; /* Заголовок остаётся слева */
+}
+
+.study h3, .study h4, .study p,
+.profile h3, .profile h4, .profile p {
+    text-align: center; /* Остальной текст центрируется */
+}
+
+h3 {
+    font-size: 24px;
+    margin-top: 10px;
+}
+h4, h5, p {
+    font-size: 20px;
     margin: 5px 0;
+}
+
+.expierence {
+    display: flex;
+    flex-direction: column;
+}
+
+.expierence .job-entry {
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 20px;
+    position: relative;
+}
+/* Даты */
+.expierence .date {
+    font-weight: bold;
+    text-align: center;
+    width: 20%;
+    min-width: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.expierence .date span {
+    display: block;
+}
+.expierence .separator-line {
+    position: absolute;
+    left: 20%;
+    top: 0;
+    bottom: 0;
+    width: 3px; /* Толщина линии */
+    background-color: rgb(174, 163, 148); /* Цвет как в PDF */
+}
+.expierence .date .separator {
+    display: block;
+    font-size: 22px;
+    font-weight: bold;
+    margin: -5px 0; /* Подгоняем расстояние */
+}
+
+.expierence .job-info {
+    width: 75%;
+    text-align: left;
+    padding-left: 30px; /* Отступ от линии */
+}
+
+
+/* Мобильная версия */
+@media screen and (max-width: 820px) {
+    .content {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .study, .profile {
+        width: 100%;
+        margin: 0;
+        padding: 10px;
+    }
+
+    .study h2, .profile h2 {
+        text-align: center;
+        width: 100%;
+    }
+
+    .study h3, .study h4, .study p,
+    .profile h3, .profile h4, .profile p {
+        text-align: center;
+    }
+}
+@media screen and (max-width: 768px) {
+    .expierence .job-entry {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .expierence .separator-line {
+        position: relative;
+        width: 60%;
+        height: 2px;
+        left: 0;
+        margin: 10px 0;
+    }
+
+    .expierence .date {
+        width: 100%;
+        margin-bottom: 5px;
+    }
+
+    .expierence .job-info {
+        width: 100%;
+        padding-left: 0;
+    }
 }
